--- a/ipynb/World_Happiness_Report_2019_jerarquico.ipynb
+++ b/ipynb/World_Happiness_Report_2019_jerarquico.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -230,13 +230,13 @@
        "[156 rows x 9 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv( \"datasets/World Happiness Report_2019.csv\")\n",
+    "df = pd.read_csv( \"../datasets/World Happiness Report_2019.csv\")\n",
     "df"
    ]
   },
