--- a/ipynb/World_Happiness_Report_2019_kmeans.ipynb
+++ b/ipynb/World_Happiness_Report_2019_kmeans.ipynb
@@ -260,7 +260,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv( \"datasets/World Happiness Report_2019.csv\")\n",
+    "df = pd.read_csv( \"../datasets/World Happiness Report_2019.csv\")\n",
     "df"
    ]
   },
